--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,7 @@ license = "MIT"
 readme = "README.md"
 
 [dependencies]
-image = "0"
-ffmpeg = {git = "https://github.com/meh/rust-ffmpeg"}
-
+image = "0.23.11"
+ffmpeg = "0.3.0"
 [dev-dependencies]
 rustface = "*"
